# reservoir-computing-lab

./: .gitignore  CAMPAIGN_DESIGN.md  README.md  cost_benchmark.ipynb  pyproject.toml  sanity_check_rnn_lstm.ipynb
configs/designs/: cycle_comparison.yaml  final_reservoir_design_comparison.yaml  mackey_glass_horizon_diagnostic.yaml  mackey_glass_nonnormal_horizon.yaml  multiscale_comparison.yaml  multiscale_coupling_sensitivity.yaml  nonnormal_transient_comparison.yaml
configs/experiments/: baseline_narma10.yaml
configs/sweeps/: pilot_multitask.yaml  pilot_narma10.yaml  region_selection_multitask.yaml
configs/tasks/: mackey_glass.yaml  narma10.yaml
results/baseline_narma10/: baseline_narma10_seed123.json  (+2 more)
scripts/: build_campaign_artifacts.py  build_task_rankings.py  plot_frontier.py  repair_external_parameter_counts.py  run_baseline.py  run_design_comparison.py  run_esp_frontier.py  run_external_comparison.py  run_multitask_sweep.py  run_sweep.py
src/rc_lab/: __init__.py
tests/: test_aggregate_comparison.py  test_bugfix_exploration.py  test_bugfix_preservation.py  test_delay_recall_task.py  test_esp_frontier_runner.py  test_esp_stability.py  test_external_comparison_runner.py  test_grid_union.py  test_mackey_glass_task.py  test_memory_metrics.py  test_multiscale_reservoir.py  test_ngrc_alias.py  test_nonnormal_transient.py  test_persistence_baseline.py  test_reservoirs_design.py  test_ridge_readout.py  test_save_comparison.py  test_sequence_models.py  test_task_rankings.py  test_viz_campaign.py  test_viz_frontier.py  test_viz_heatmaps.py  test_viz_tables.py
(+4146 files in other folders)
